Réduction taille hero section sur mobile pour voir carrousel plus tôt

--- a/index.html
+++ b/index.html
@@ -425,6 +425,22 @@ header p {
     .hero-section {
         padding: 40px 4% !important;
     }
+
+    .hero-section h1 {
+        font-size: 24px !important;
+        line-height: 1.2 !important;
+        margin-bottom: 12px !important;
+    }
+
+    .hero-section > p:first-of-type {
+        font-size: 14px !important;
+        margin-bottom: 10px !important;
+    }
+
+    .hero-section > p:nth-of-type(2) {
+        font-size: 13px !important;
+        margin-bottom: 12px !important;
+    }
     
     .cta-button {
         font-size: 17px !important;
