Réduction drastique hero mobile + badges après carrousel + bouton CTA masqué

--- a/index.html
+++ b/index.html
@@ -427,19 +427,23 @@ header p {
     }
 
     .hero-section h1 {
-        font-size: 24px !important;
-        line-height: 1.2 !important;
-        margin-bottom: 12px !important;
+        font-size: 18px !important;
+        line-height: 1.1 !important;
+        margin-bottom: 8px !important;
     }
 
     .hero-section > p:first-of-type {
-        font-size: 14px !important;
-        margin-bottom: 10px !important;
+        font-size: 12px !important;
+        margin-bottom: 6px !important;
     }
 
     .hero-section > p:nth-of-type(2) {
-        font-size: 13px !important;
-        margin-bottom: 12px !important;
+        font-size: 11px !important;
+        margin-bottom: 8px !important;
+    }
+
+    .hero-section .cta-button {
+        display: none !important;
     }
     
     .cta-button {
@@ -616,16 +620,6 @@ header p {
         <p style="font-size: 16px; color: #D4AF37; font-weight: bold; margin-bottom: 15px;">
             🌟 OFFRE NOËL LIMITÉE : 399€ TTC (au lieu de 550€)
         </p>
-        
-        <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" class="cta-button">
-            Je sécurise mon lot à 399€ TTC
-        </a>
-
-        <div class="badges">
-            <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
-            <span class="badge">✅ Acier Inoxydable Doré Or Fin</span>
-            <span class="badge">✅ Livraison Rapide France</span>
-        </div>
 
         <!-- CAROUSEL -->
         <div class="carousel-container">
@@ -643,6 +637,12 @@ header p {
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
+        </div>
+
+        <div class="badges">
+            <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
+            <span class="badge">✅ Acier Inoxydable Doré Or Fin</span>
+            <span class="badge">✅ Livraison Rapide France</span>
         </div>
     </section>
 
