Changer couleur flèches carrousel étalage en blanc

--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@ header p {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        background: rgba(212,175,55,0.8);
-        color: white;
+        background: rgba(255,255,255,0.8);
+        color: #333;
         border: none;
         font-size: 24px;
         padding: 10px 15px;
@@ -647,7 +647,7 @@ header p {
     }
 
     .carousel-btn-etalage:hover {
-        background: rgba(212,175,55,1);
+        background: rgba(255,255,255,1);
     }
 
     .carousel-btn-etalage.prev {
