Ajouter 4 CTA adaptés au contexte

--- a/index.html
+++ b/index.html
@@ -886,6 +886,10 @@ header p {
             </div>
         </div>
 
+        <div style="text-align: center; margin: 40px 0;">
+            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Découvrir les 4 colliers en détail</a>
+        </div>
+
         <div class="badges">
             <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
             <span class="badge">✅ Acier Inoxydable Doré Or Fin</span>
@@ -915,6 +919,10 @@ header p {
         <p style="font-size: 20px; font-weight: 700; color: #D4AF37; margin-top: 20px;">
             Ce lot a été pensé EXACTEMENT pour résoudre ces problèmes.
         </p>
+
+        <div style="text-align: center; margin: 40px 0;">
+            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Voir la composition complète</a>
+        </div>
     </section>
 
     <!-- SECTION 3 : SOLUTION -->
@@ -1133,6 +1141,10 @@ header p {
 
         <img src="f3ff2af4-aaa6-4c02-bfb1-a25cb0d2e9f8.jpg" alt="Cliente heureuse avec collier ancre" class="bijoux-image">
 
+        <div style="text-align: center; margin: 40px 0;">
+            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Contacter Solustoc directement</a>
+        </div>
+
         <h3 style="margin-top: 40px; text-align: center;">🏢 Les Bijoux de créateurs Français by Solustoc</h3>
         <p style="text-align: center;">→ SIRET : <strong>943 702 126 00013</strong><br/>
         → Société française basée dans le bassin nantais<br/>
@@ -1193,9 +1205,12 @@ header p {
         </div>
 
         <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
-    </section>
 
-    <!-- SECTION 7 : URGENCE -->
+        <div style="text-align: center; margin: 40px 0;">
+            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Réserver mon lot maintenant</a>
+        </div>
+    </section>
+    <!-- SECTION 7 : URGENCE -->>
     <section>
         <h2>⏰ STOCKS LIMITÉS POUR NOËL 2025</h2>
         
