--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ header p {
         </div>
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Découvrir les 4 colliers en détail</a>
+            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Découvrir les 4 colliers en détail</a>
         </div>
 
         <div class="badges">
@@ -921,7 +921,7 @@ header p {
         </p>
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Voir la composition complète</a>
+            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Voir la composition complète</a>
         </div>
     </section>
 
@@ -1142,7 +1142,7 @@ header p {
         <img src="f3ff2af4-aaa6-4c02-bfb1-a25cb0d2e9f8.jpg" alt="Cliente heureuse avec collier ancre" class="bijoux-image">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Contacter Solustoc directement</a>
+            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Contacter Solustoc directement</a>
         </div>
 
         <h3 style="margin-top: 40px; text-align: center;">🏢 Les Bijoux de créateurs Français by Solustoc</h3>
@@ -1207,7 +1207,7 @@ header p {
         <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://wa.me/33XXXXXXXXX" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Réserver mon lot maintenant</a>
+            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Réserver mon lot maintenant</a>
         </div>
     </section>
     <!-- SECTION 7 : URGENCE -->>
