--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ header p {
     <!-- HEADER -->
     <header>
         <img src="logo.png" alt="Les Bijoux Français">
-        <p>Découvrez nos créations artisanales françaises en acier inoxydable avec finition dorée durable. Chaque bijou est sélectionné pour sa qualité, son style et son prix ultra accessible</p>
+        <p style="font-size: 14px;">Créations françaises en acier inoxydable doré. Bijoux durables, élégants et accessibles, sélectionnés pour plaire à tous vos clients.</p>
     </header>
 
     <!-- SECTION 1 : HERO -->
@@ -887,7 +887,7 @@ header p {
         </p>
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Je sécurise mon lot à 480€ TTC</a>
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je sécurise mon lot à 480€ TTC</a>
         </div>
 
         <div class="badges">
@@ -1138,7 +1138,7 @@ header p {
         <img src="f3ff2af4-aaa6-4c02-bfb1-a25cb0d2e9f8.jpg" alt="Cliente heureuse avec collier ancre" class="bijoux-image">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Acheter maintenant</a>
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Acheter maintenant</a>
         </div>
 
         <h3 style="margin-top: 40px; text-align: center;">🏢 Les Bijoux de créateurs Français by Solustoc</h3>
@@ -1203,7 +1203,7 @@ header p {
         <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 16px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 18px; box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">Je commande maintenant</a>
+            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je commande maintenant</a>
         </div>
     </section>
     <!-- SECTION 7 : URGENCE -->>
