Optimiser bloc LOT NOËL 2025 - texte court + tailles réduites (14px, 13px, 12px)

--- a/index.html
+++ b/index.html
@@ -879,11 +879,14 @@ header p {
             </div>
         </div>
 
-        <h1>🎄 LOT NOËL 2025 : 370 Bijoux de Créateurs Français<br/>Marges Exceptionnelles pour Revendeurs Exigeants</h1>
+        <h1 style="font-size: 14px;">🎄 LOT NOËL 2025 : 370 bijoux créateurs français</h1>
         
-        <p style="font-size: 20px; font-weight: 600; text-align: center;">
-            Vous en avez marre des bijoux fantaisie de mauvaise qualité ?<br/>
-            Découvrez des créations françaises qui se vendent seules.
+        <p style="font-size: 13px; font-weight: 600; text-align: center;">
+            Marges 90%+ pour revendeurs exigeants.
+        </p>
+        
+        <p style="font-size: 12px; font-weight: 600; text-align: center;">
+            Des bijoux qualitatifs qui se vendent seuls — parfaits pour la haute saison.
         </p>
 
         <div style="text-align: center; margin: 40px 0;">
