Repositionner texte intro après carrousel - supprimer du header

--- a/index.html
+++ b/index.html
@@ -852,7 +852,6 @@ header p {
     <!-- HEADER -->
     <header>
         <img src="logo.png" alt="Les Bijoux Français">
-        <p style="font-size: 14px;">Créations françaises en acier inoxydable doré. Bijoux durables, élégants et accessibles, sélectionnés pour plaire à tous vos clients.</p>
     </header>
 
     <!-- SECTION 1 : HERO -->
@@ -878,6 +877,8 @@ header p {
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
+
+        <p style="font-size: 14px; color: #444; text-align: center; margin: 20px 0; line-height: 1.5;">Créations françaises en acier inoxydable doré. Bijoux durables, élégants et accessibles, sélectionnés pour plaire à tous vos clients.</p>
 
         <h1 style="font-size: 14px;">🎄 LOT NOËL 2025 : 370 bijoux créateurs français</h1>
         
