Déplacer offre Noël après le CTA

--- a/index.html
+++ b/index.html
@@ -856,10 +856,6 @@ header p {
 
     <!-- SECTION 1 : HERO -->
     <section class="hero-section">
-        <p style="font-size: 16px; color: #D4AF37; font-weight: bold; margin-bottom: 15px;">
-            🌟 OFFRE NOËL LIMITÉE : 480€ TTC (au lieu de 550€)
-        </p>
-
         <!-- CAROUSEL -->
         <div class="carousel-container">
             <div class="carousel">
@@ -891,6 +887,10 @@ header p {
         <div style="text-align: center; margin: 40px 0;">
             <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je sécurise mon lot à 480€ TTC</a>
         </div>
+
+        <p style="font-size: 16px; color: #D4AF37; font-weight: bold; margin: 20px 0; text-align: center;">
+            🌟 OFFRE NOËL LIMITÉE : 480€ TTC (au lieu de 550€)
+        </p>
 
         <p style="font-size: 14px; color: #444; text-align: center; margin: 20px 0; line-height: 1.5;">Créations françaises en acier inoxydable doré. Bijoux durables, élégants et accessibles, sélectionnés pour plaire à tous vos clients.</p>
 
