--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@ header p {
         <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/eVq7sE0bc7FO99hfq98EM02" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je commande maintenant</a>
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je commande maintenant</a>
         </div>
     </section>
     <!-- SECTION 7 : URGENCE -->
