Optimiser 3 sections : 'Ce que vous recevez' (marges -20%, H3 +10%), FAQ (padding -20%, questions +10%), 'Stocks limités' (padding -25%, titre +12%)

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ footer a:hover {
     background: #FFFFFF !important;
     border: 2px solid #E8E8E8 !important;
     border-radius: 10px !important;
-    padding: 16px !important;
-    margin-bottom: 10px !important;
+    padding: 13px !important;
+    margin-bottom: 8px !important;
     transition: all 0.3s ease !important;
     cursor: pointer;
 }
@@ -276,8 +276,8 @@ footer a:hover {
 
 .faq-question {
     font-weight: 700 !important;
-    color: #1a1a1a !important;
-    font-size: 18px !important;
+    color: #222222 !important;
+    font-size: 19.8px !important;
     margin-bottom: 0 !important;
     display: flex;
     justify-content: space-between;
@@ -296,11 +296,11 @@ footer a:hover {
 
 .faq-answer {
     color: #555 !important;
-    font-size: 16px !important;
+    font-size: 14.7px !important;
     line-height: 1.5 !important;
     display: none;
-    margin-top: 12px;
-    padding-top: 12px;
+    margin-top: 10px;
+    padding-top: 10px;
     border-top: 1px solid #E8E8E8;
 }
 
@@ -960,11 +960,12 @@ header p {
             🌟 Qualité créateur • 💵 Marge 88% • ⚡ Stock limité
         </p>
 
-        <h3>📦 59 RÉFÉRENCES DIFFÉRENTES</h3>
-        <p>→ Variété maximale pour plaire à tous vos clients<br/>
+        <h3 style="font-size: 22px; color: #333333;">📦 59 RÉFÉRENCES DIFFÉRENTES</h3>
+        <p style="margin-bottom: 9px;">→ Variété maximale pour plaire à tous vos clients<br/>
         → Pas de stock mort : chaque pièce a son acheteur</p>
 
         <!-- CAROUSEL ETALAGE -->
+        <div style="margin-top: 8px;"></div>
         <div class="carousel-container-etalage">
             <div class="carousel-etalage">
                 <img src="Lotbijoux3.jpg" alt="Assortiment complet du lot" class="carousel-slide-etalage active">
@@ -982,7 +983,7 @@ header p {
             </div>
         </div>
 
-        <h3 style="text-align: center; color: #333333;">📋 COMPOSITION (370 PIÈCES)</h3>
+        <h3 style="text-align: center; color: #333333; font-size: 22px; margin-top: 24px;">📋 COMPOSITION (370 PIÈCES)</h3>
         
         <p style="font-size: 16px; line-height: 1.6; text-align: center; color: #555555;">
             ✨ <strong>Médailles Initiales : 131 pcs</strong> (best-sellers)<br/>
@@ -1055,8 +1056,8 @@ header p {
             </div>
         </div>
 
-        <h3>💎 QUALITÉ CRÉATEUR FRANÇAIS</h3>
-        <p style="font-size: 16px; color: #555555;">
+        <h3 style="font-size: 22px; color: #333333; margin-top: 24px;">💎 QUALITÉ CRÉATEUR FRANÇAIS</h3>
+        <p style="font-size: 16px; color: #555555; margin-bottom: 9px;">
         → Acier inoxydable + dorure or fin<br/>
         → Marque : Les Bijoux de Mimi (Arcachon)<br/>
         → Finitions soignées, qualité premium</p>
@@ -1197,20 +1198,20 @@ header p {
         </div>
     </section>
     <!-- SECTION 7 : URGENCE -->
-    <section>
-        <h2>⛰️ STOCKS LIMITu00c9S</h2>
+    <section style="padding: 22.5px 5% !important;">
+        <h2 style="font-size: 31.4px;">⛰️ STOCKS LIMITu00c9S</h2>
         
-        <p style="font-size: 16px; color: #555555; margin-top: 12px;">
+        <p style="font-size: 16px; color: #555555; margin-top: 10px;">
             Lot unique • Pas de réapprovisionnement avant 2026 • <strong>10-15 lots disponibles</strong>
         </p>
 
-        <p style="font-size: 16px; font-weight: 600; color: #C9A56B; margin-top: 14px;">
+        <p style="font-size: 16px; font-weight: 600; color: #C9A56B; margin-top: 11px;">
             ⚡ Noël se prépare maintenant. Sécurisez votre lot.
         </p>
     </section>
 
     <!-- SECTION 7B : PHOTO + URGENCE -->
-    <section style="background: #FFFFFF; padding: 60px 5%; display: flex; align-items: center; gap: 40px; flex-wrap: wrap;">
+    <section style="background: #FFFFFF; padding: 45px 5%; display: flex; align-items: center; gap: 40px; flex-wrap: wrap; margin-top: 10px;">
         <div style="flex: 1; min-width: 300px;">
             <img src="design-showcase.png" alt="Bijoux en vitrine" style="width: 100%; max-width: 500px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.15);">
         </div>
