Corriger textes mal remis : 'VOTRE MARGE' et 'STOCKS LIMITÉS' en français

--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,8 @@ header p {
     </section>
 
     <!-- SECTION 4 : CALCUL MARGE -->
-    <section class="marge-section">        <h2 style="text-align: center;">ud83dudcb0 VOTRE MARGE</h2> 
+    <section class="marge-section">
+        <h2 style="text-align: center;">💰 VOTRE MARGE</h2> 
         <p style="font-size: 16px; text-align: center; margin-top: 16px;">
             Achat : <span class="prix">480€</span> | Revente : <span class="prix">4 077€</span> | Bénéfice : <span class="benefice">3 597€</span>
         </p>
@@ -1199,7 +1200,7 @@ header p {
     </section>
     <!-- SECTION 7 : URGENCE -->
     <section style="padding: 22.5px 5% !important;">
-        <h2 style="font-size: 31.4px;">⛰️ STOCKS LIMITu00c9S</h2>
+        <h2 style="font-size: 31.4px;">⏰ STOCKS LIMITÉS</h2>
         
         <p style="font-size: 16px; color: #555555; margin-top: 10px;">
             Lot unique • Pas de réapprovisionnement avant 2026 • <strong>10-15 lots disponibles</strong>
