Optimiser bloc 'Votre Marge' : padding -25%, titre 'Votre bénéfice réel sur ce lot', CTA 'Je réserve mon lot rentable'

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ section:nth-child(even) {
     background: linear-gradient(135deg, #FFF9E6 0%, #FFFAED 100%) !important;
     border: 5px solid #C9A56B !important;
     border-radius: 20px !important;
-    padding: 28px 30px !important;
+    padding: 21px 30px !important;
     box-shadow: 0 20px 60px rgba(201, 165, 107, 0.2) !important;
     margin: 25px auto !important;
     max-width: 900px !important;
@@ -1065,7 +1065,7 @@ header p {
 
     <!-- SECTION 4 : CALCUL MARGE -->
     <section class="marge-section">
-        <h2 style="text-align: center;">💰 VOTRE MARGE</h2> 
+        <h2 style="text-align: center;">💰 Votre bénéfice réel sur ce lot</h2> 
         <p style="font-size: 16px; text-align: center; margin-top: 16px;">
             Achat : <span class="prix">480€</span> | Revente : <span class="prix">4 077€</span> | Bénéfice : <span class="benefice">3 597€</span>
         </p>
@@ -1079,7 +1079,7 @@ header p {
         </p>
 
             <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">
-            Je veux cette marge
+            Je réserve mon lot rentable
         </a>
     </section>
 
