Harmoniser tous les CTA : couleur uniforme #C9A56B, police Playfair Display, ovale, ombre légère

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ header p {
 
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 22px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je sécurise mon lot à 480€ TTC</a>
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
         </div>
 
         <p style="font-size: 15px; color: #C9A56B; font-weight: 600; margin: 16px 0; text-align: center;">
@@ -1138,7 +1138,7 @@ header p {
         <img src="f3ff2af4-aaa6-4c02-bfb1-a25cb0d2e9f8.jpg" alt="Cliente heureuse avec collier ancre" class="bijoux-image">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Acheter maintenant</a>
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Acheter maintenant</a>
         </div>
 
         <h3 style="margin-top: 20px; text-align: center;">🏂 Les Bijoux de créateurs Français</h3>
@@ -1195,7 +1195,7 @@ header p {
         <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
 
         <div style="text-align: center; margin: 40px 0;">
-            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" style="display: inline-block; background: linear-gradient(135deg, #D4AF37 0%, #E8C547 100%); color: #1a1a1a; padding: 18px 40px; border-radius: 50px; text-decoration: none; font-weight: 700; font-size: 19.8px; box-shadow: 0 6px 20px rgba(212, 175, 55, 0.4); transition: all 0.3s ease; width: 90%; max-width: 400px; text-align: center;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 25px rgba(212, 175, 55, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(212, 175, 55, 0.4)'">Je commande maintenant</a>
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je commande maintenant</a>
         </div>
     </section>
     <!-- SECTION 7 : URGENCE -->
@@ -1251,11 +1251,11 @@ header p {
         </p>
         
         <div style="margin-top: 20px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-            <a href="https://wa.me/33756923323?text=Bonjour%2C%20j%27aimerais%20en%20savoir%20plus%20sur%20le%20lot%20de%20bijoux%20de%20No%C3%ABl" class="cta-button" style="background-color: #25D366; max-width: 200px; text-decoration: none;">
-                💱 WhatsApp
+            <a href="https://wa.me/33756923323?text=Bonjour%2C%20j%27aimerais%20en%20savoir%20plus%20sur%20le%20lot%20de%20bijoux%20de%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
+                📤 WhatsApp
             </a>
-            <a href="mailto:contact@lesbijouxfrancais.fr?subject=Demande%20d%27information%20-%20Lot%20Bijoux%20No%C3%ABl" class="cta-button" style="background-color: #D4AF37; max-width: 200px; text-decoration: none;">
-                ✉️ Email
+            <a href="mailto:contact@lesbijouxfrancais.fr?subject=Demande%20d%27information%20-%20Lot%20Bijoux%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
+                ✏️ Email
             </a>
         </div>
 
