Ajouter id='cta-whatsapp-b2b' au bouton WhatsApp

--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@ header p {
         </p>
         
         <div style="margin-top: 20px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-            <a href="https://wa.me/33756923323?text=Bonjour%2C%20j%27aimerais%20en%20savoir%20plus%20sur%20le%20lot%20de%20bijoux%20de%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
+            <a id="cta-whatsapp-b2b" href="https://wa.me/33756923323?text=Bonjour%2C%20j%27aimerais%20en%20savoir%20plus%20sur%20le%20lot%20de%20bijoux%20de%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
                 📤 WhatsApp
             </a>
             <a href="mailto:contact@lesbijouxfrancais.fr?subject=Demande%20d%27information%20-%20Lot%20Bijoux%20No%C3%ABl" class="cta-button" style="max-width: 200px; text-decoration: none;">
