--- a/index.html
+++ b/index.html
@@ -962,6 +962,14 @@ header p {
     'https://www.googletagmanager.com/gtm.js?id=GTM-WN8JWKFH'+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WN8JWKFH');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M4FD5J13XJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-M4FD5J13XJ');
+    </script>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
