Correction : carrousel femme avant problème, photo remplacée par Designsanstitre.png

--- a/index.html
+++ b/index.html
@@ -1077,8 +1077,6 @@ header p {
             </div>
         </div>
 
-
-
         <div style="text-align: center; margin: 40px 0;">
             <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
         </div>
@@ -1093,6 +1091,24 @@ header p {
             <span class="badge">✅ Livraison Rapide France</span>
         </div>
     </section>
+
+    <!-- CAROUSEL PRINCIPAL (FEMME) - AVANT PROBLÈME -->
+    <div class="carousel-container" style="max-height: 350px; overflow: hidden; max-width: 600px; margin: 20px auto;">
+        <div class="carousel" style="max-height: 350px;">
+            <img src="carousel-1.jpg" alt="Collier coeur" class="carousel-slide active">
+            <img src="carousel-2.jpg" alt="Collier or" class="carousel-slide">
+            <img src="carousel-3.jpg" alt="Chaîne petit ange" class="carousel-slide">
+            <img src="carousel-4.jpg" alt="Angel pint" class="carousel-slide">
+        </div>
+        <button class="carousel-btn prev" onclick="moveSlide(-1)">❮</button>
+        <button class="carousel-btn next" onclick="moveSlide(1)">❯</button>
+        <div class="carousel-dots">
+            <span class="dot" onclick="currentSlide(0)"></span>
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+    </div>
 
     <!-- SECTION 2 : PROBLÈME -->
     <section>
@@ -1335,7 +1351,7 @@ header p {
             <p style="font-size: 13px; color: #333333; margin: 0;">Offre valable jusqu'à dimanche minuit</p>
         </div>
         
-        <img src="lotbijux1.jpg" alt="Lot complet de bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
+        <img src="Designsanstitre.png" alt="Design sans titre - Bijoux créateurs français" class="bijoux-image" style="margin-top: 40px;">
     </section>
 
 
