FEAT: Déplacement du bloc de badges au-dessus de la section Problème.

--- a/index.html
+++ b/index.html
@@ -1024,11 +1024,7 @@ header p {
             🌟 480€ TTC (au lieu de 550€)
         </p>
 
-        <div class="badges">
-            <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
-            <span class="badge">✅ Acier Inoxydable Doré Or Fin</span>
-            <span class="badge">✅ Livraison Rapide France</span>
-        </div>
+
     </section>
 
 	    <!-- CAROUSEL PRINCIPAL (FEMME) - AVANT PROBLÈME -->
@@ -1051,6 +1047,12 @@ header p {
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
     </div>
+
+        <div class="badges" style="margin-bottom: 20px;">
+            <span class="badge">✅ Créateurs Français - Les Bijoux de Mimi</span>
+            <span class="badge">✅ Acier Inoxydable Doré Or Fin</span>
+            <span class="badge">✅ Livraison Rapide France</span>
+        </div>
 
     <!-- SECTION 2 : PROBLÈME -->
     <section>
