FEAT: Inversion des carrousels PRINCIPAL et ETALAGE.

--- a/index.html
+++ b/index.html
@@ -1027,24 +1027,22 @@ header p {
 
     </section>
 
-	    <!-- CAROUSEL PRINCIPAL (FEMME) - AVANT PROBLÈME -->
-    <div style="text-align: center; margin: 20px 0;">
-        <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
-    </div>
-    <div class="carousel-container" style="max-height: 350px; overflow: hidden; max-width: 800px; margin: 20px auto;">
-        <div class="carousel" style="max-height: 350px;">
-            <img src="carousel-1.jpg" alt="Collier coeur" class="carousel-slide active">
-            <img src="carousel-2.jpg" alt="Collier or" class="carousel-slide">
-            <img src="carousel-3.jpg" alt="Chaîne petit ange" class="carousel-slide">
-            <img src="carousel-4.jpg" alt="Angel pint" class="carousel-slide">
+	    <!-- CAROUSEL ETALAGE (RELOCALISÉ) -->
+    <div style="margin-top: 6px;"></div>
+    <div class="carousel-container-etalage">
+        <div class="carousel-etalage">
+            <img src="Lotbijoux3.jpg" alt="Assortiment complet du lot" class="carousel-slide-etalage active">
+            <img src="etal-1.jpg" alt="Étalage 1" class="carousel-slide-etalage">
+            <img src="etal-2.jpg" alt="Étalage 2" class="carousel-slide-etalage">
+            <img src="etal-3.jpg" alt="Étalage 3" class="carousel-slide-etalage">
         </div>
-        <button class="carousel-btn prev" onclick="moveSlide(-1)">❮</button>
-        <button class="carousel-btn next" onclick="moveSlide(1)">❯</button>
-        <div class="carousel-dots">
-            <span class="dot" onclick="currentSlide(0)"></span>
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
+        <button class="carousel-btn-etalage prev" onclick="moveSlideEtalage(-1)">❮</button>
+        <button class="carousel-btn-etalage next" onclick="moveSlideEtalage(1)">❯</button>
+        <div class="carousel-dots-etalage">
+            <span class="dot-etalage" onclick="currentSlideEtalage(0)"></span>
+            <span class="dot-etalage" onclick="currentSlideEtalage(1)"></span>
+            <span class="dot-etalage" onclick="currentSlideEtalage(2)"></span>
+            <span class="dot-etalage" onclick="currentSlideEtalage(3)"></span>
         </div>
     </div>
 
@@ -1078,22 +1076,24 @@ header p {
         <p style="margin-bottom: 12px; font-size: 15px;">→ Variété maximale pour plaire à tous vos clients<br/>
         → Pas de stock mort : chaque pièce a son acheteur</p>
 
-        <!-- CAROUSEL ETALAGE -->
-        <div style="margin-top: 6px;"></div>
-        <div class="carousel-container-etalage">
-            <div class="carousel-etalage">
-                <img src="Lotbijoux3.jpg" alt="Assortiment complet du lot" class="carousel-slide-etalage active">
-                <img src="etal-1.jpg" alt="Étalage 1" class="carousel-slide-etalage">
-                <img src="etal-2.jpg" alt="Étalage 2" class="carousel-slide-etalage">
-                <img src="etal-3.jpg" alt="Étalage 3" class="carousel-slide-etalage">
+        <!-- CAROUSEL PRINCIPAL (RELOCALISÉ) -->
+        <div style="text-align: center; margin: 20px 0;">
+            <a href="https://buy.stripe.com/7sI5ky9li02U6qccMM" class="cta-button">Je sécurise mon lot à 480€ TTC</a>
+        </div>
+        <div class="carousel-container" style="max-height: 350px; overflow: hidden; max-width: 800px; margin: 20px auto;">
+            <div class="carousel" style="max-height: 350px;">
+                <img src="carousel-1.jpg" alt="Collier coeur" class="carousel-slide active">
+                <img src="carousel-2.jpg" alt="Collier or" class="carousel-slide">
+                <img src="carousel-3.jpg" alt="Chaîne petit ange" class="carousel-slide">
+                <img src="carousel-4.jpg" alt="Angel pint" class="carousel-slide">
             </div>
-            <button class="carousel-btn-etalage prev" onclick="moveSlideEtalage(-1)">❮</button>
-            <button class="carousel-btn-etalage next" onclick="moveSlideEtalage(1)">❯</button>
-            <div class="carousel-dots-etalage">
-                <span class="dot-etalage" onclick="currentSlideEtalage(0)"></span>
-                <span class="dot-etalage" onclick="currentSlideEtalage(1)"></span>
-                <span class="dot-etalage" onclick="currentSlideEtalage(2)"></span>
-                <span class="dot-etalage" onclick="currentSlideEtalage(3)"></span>
+            <button class="carousel-btn prev" onclick="moveSlide(-1)">❮</button>
+            <button class="carousel-btn next" onclick="moveSlide(1)">❯</button>
+            <div class="carousel-dots">
+                <span class="dot" onclick="currentSlide(0)"></span>
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
 
