FIX: Correction des flèches en double sur CAROUSEL ETALAGE et restauration du carrousel Témoignages.

--- a/index.html
+++ b/index.html
@@ -1036,8 +1036,7 @@ header p {
             <img src="etal-2.jpg" alt="Étalage 2" class="carousel-slide-etalage">
             <img src="etal-3.jpg" alt="Étalage 3" class="carousel-slide-etalage">
         </div>
-        <button class="carousel-btn-etalage prev" onclick="moveSlideEtalage(-1)">❮</button>
-        <button class="carousel-btn-etalage next" onclick="moveSlideEtalage(1)">❯</button>
+
         <div class="carousel-dots-etalage">
             <span class="dot-etalage" onclick="currentSlideEtalage(0)"></span>
             <span class="dot-etalage" onclick="currentSlideEtalage(1)"></span>
@@ -1204,24 +1203,24 @@ header p {
         <div class="testimonial" style="border: 1px solid #C9A56B; padding: 15px; border-radius: 8px; margin-bottom: 15px; background: #FFFDF8;">
             <p style="font-size: 16px; font-style: italic; margin-bottom: 10px;">"Qualité premium. Mes clients redemandent. Parfait pour la revente."</p>
             <p class="testimonial-author" style="font-size: 14px; font-weight: 600; color: #C9A56B;">— Marc D., Propriétaire de Boutique, Lyon</p>
-        </div>         <div class="carousel-slide-review">
+        </div>
+        <div class="carousel-container-review">
+            <div class="carousel-review">
+                <div class="carousel-slide-review">
                     <img src="review-collier-eye.jpg" alt="Collier Eye">
                 </div>
-                <div class="carousel-slide-review">
+
                     <img src="review-collier-papillon.jpg" alt="Collier Papillon">
-                </div>
-                <div class="carousel-slide-review">
+
                     <img src="review-collier-chance.jpg" alt="Collier Chance">
-                </div>
-                <div class="carousel-slide-review">
+
                     <img src="review-collier-coccinelle.jpg" alt="Collier Coccinelle">
-                </div>
-                <div class="carousel-slide-review">
+
                     <img src="review-collier-astre.jpg" alt="Collier Astre">
                 </div>
-                <button class="carousel-btn-review prev" onclick="changeSlideReview(-1)">❮</button>
-                <button class="carousel-btn-review next" onclick="changeSlideReview(1)">❯</button>
-            </div>
+            <button class="carousel-btn-review prev" onclick="changeSlideReview(-1)">❮</button>
+            <button class="carousel-btn-review next" onclick="changeSlideReview(1)">❯</button>
+        </div>
             <div class="carousel-dots-review">
                 <span class="dot-review" onclick="currentSlideReview(0)"></span>
                 <span class="dot-review" onclick="currentSlideReview(1)"></span>
